# copilot-bootstrap

./: .gitignore  BOOTSTRAP_GUIDE.md  EDRC-glossary.md  MANUAL.md  README.md  brownfield-methodology.md  project.json  pyproject.toml
.discovery/: README.md  arch.json  confidence.json  confidence.schema.json  context.json  context.schema.json  fs.json  generators.lock.schema.json  pipeline.lock.schema.json  stack.json  tools.json
.github/: copilot-instructions.md
.github/agents/: analyst.agent.md  architect.agent.md  bootstrap.agent.md  designer.agent.md  discovery.agent.md  evaluator.agent.md  ops.agent.md  script.agent.md  spec.agent.md
.github/prompts/: adlc-status.prompt.md  assess.prompt.md  bootstrap.prompt.md  build-context.prompt.md  discover.prompt.md  discovery-status.prompt.md  finish.prompt.md  generate.prompt.md  init.prompt.md  pov.prompt.md  report.prompt.md  reset.prompt.md  review-agent.prompt.md  review-spec.prompt.md  scan.prompt.md  spec.prompt.md  status.prompt.md  stitch.prompt.md
.greenfield/: answers.json  answers.schema.json  context.json  context.schema.json  decisions.json  decisions.schema.json  generators.lock.schema.json  pipeline.lock.schema.json  scope.json  scope.schema.json
docs/design/: stitch-setup.md
docs/workflow/: adlc.md  agents.md  bootstrap.md  brownfield.md  design.md
scripts/: ask.sh  build-context.sh  discover.sh  discovery-status.sh  generate-status.sh  generate.sh  init.sh  interview.sh  next.sh  redo.sh  render-html.sh  scan.sh  spec-status.sh  spec.sh  step.sh  stitch-mcp.js  sync.sh  validate-state.sh
(+106 files in other folders)
