[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copilot-bootstrap"
version = "0.0.1"
description = "Bootstrap workflow tool for Copilot-assisted projects"
requires-python = ">=3.9"

[project.scripts]
copilot-bootstrap = "copilot_bootstrap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_bootstrap"]

[tool.hatch.build.targets.wheel.force-include]
"scripts" = "copilot_bootstrap/scripts"
"docs" = "copilot_bootstrap/docs"
